# confx_gen_data

./: README.md
maestro_v2/: 1.m  CMakeLists.txt  run.sh
maestro_v2/accelergy/: accelergy_converter.py  readme.txt
maestro_v2/data/DFSL_description/: BLAS3_dla.m  BLAS3_opt.m  BLAS3_rs.m  BLAS3_ws.m  MultFactorTest.m  ResNeXt50_nlr.m  Resnet50_dla_CL32.m  Resnet50_rs.m  UNet_DLA_CL256.m  UNet_DLA_CL8.m  UNet_RS.m  UNet_nlr.m  advanced_dataflows.m  alexnet_nlr.m  alexnet_os.m  conv4.m  darpa_proposal.m  darpa_proposal3.m  t.m  test15.m  test3.m  test5.m  test7.m  test9.m  test_felix.m  test_small.m  vgg16_dla.m  vgg16_xp.m
maestro_v2/data/HighLevelCluster/: Resnet50_NP_CP.m
maestro_v2/data/dataflow/: alexnet-prs-c5.m  dla.m  maeri_gemm.m  prs.m  weight-stationary.m
maestro_v2/data/hardware/: example_acc.m
maestro_v2/data/layer/: deepbench_gemm2.m  deepbench_gemm5.m  re_vgg16_conv6.m  synthetic_late.m
maestro_v2/data/program/: toy_program.cpp
maestro_v2/deprecated_files/: CA_cost-analysis-engine_backup.hpp  DSE.cpp  analysis-structure.hpp  maestro.hpp  maestro_v3.cpp  mapping-syntax.hpp  noc-model.hpp  parser.hpp  program-syntax.hpp
maestro_v2/lib/include/abstract-hardware-model/: AHW_Accelerator.hpp  AHW_noc-model.hpp  AHW_noc-modelV2.hpp
maestro_v2/lib/include/dataflow-analysis/: DFA_cluster-analysis.hpp
maestro_v2/lib/include/dataflow-specification-language/: DFSL_dataflow-parser.hpp  DFSL_expression.hpp
maestro_v2/lib/include/flexibility-evaluation/: FE_flexibility-analysis.hpp  FE_tile-info-table.hpp
my_maestro_v2/: .gitignore  SConstruct  (+2 more)
(+119 files in other folders)
